--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     font-family: 'DepartureMono', monospace;
     margin: 0;
     padding: 0;
-    background-color: #F9F9F9;
+    background-color: #ffe7ee;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -302,7 +302,7 @@ body {
 .cv-content {
     width: 90%;
     max-width: 800px;
-    background-color: #F5F5F5;
+    background-color: #fff5f8;
     padding: 30px;
     border: 1px solid #DDD;
     border-radius: 5px;
